# Nanoquant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  split_repos.sh
apps/: nanoquant.cpp
bindings/python/: nanoquant_ctypes.py
docs/: DESIGN.md  HF_OLLAMA_WORKFLOW.md
examples/: prompts.txt  quick_demo.sh
include/nanoquant/: backend.hpp  binary_tensor.hpp  bitpack.hpp  c_api.h  gguf.hpp  quantization.hpp  tensor.hpp  workflow.hpp
notebooks/: 1_initial_model_load.ipynb  3_lora_finetuning.ipynb  4_pruning.ipynb  5_1_evaluation.ipynb  5_quantum_simulation.ipynb
notebooks/.ipynb_checkpoints/: 1_initial_model_load-checkpoint.ipynb  2_quantization-checkpoint.ipynb  4_pruning-checkpoint.ipynb  5_1_evaluation-checkpoint.ipynb  Untitled-checkpoint.ipynb  viualisation-checkpoint.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20250413_124429-6wohytdw/files/: requirements.txt  wandb-metadata.json
notebooks/wandb/run-20250413_171149-a636ydby/: run-a636ydby.wandb
notebooks/wandb/run-20250413_171149-a636ydby/files/: wandb-metadata.json
notebooks/wandb/run-20250415_014858-wtxa4mck/: run-wtxa4mck.wandb
notebooks/wandb/run-20250415_014858-wtxa4mck/files/: requirements.txt  wandb-metadata.json
scripts/: run_all.py  run_lora.py  run_pruning.py  run_qat.py  run_quantum.py
scripts/.ipynb_checkpoints/: run_quantum-checkpoint.ipynb
src/: __init__.py  backend.cpp  binary_tensor.cpp  bitpack.cpp  c_api.cpp  custom_quant.py  data_loader.py  evaluation.py  gguf.cpp  lora.py  metal_backend.mm  model_loader.py  optimum_quant.py  pruning.py  qat.py  quantization.cpp  tensor.cpp  training.py  utils.py  workflow.cpp
tests/: test_core.cpp
